# ParcFerme

./: .env.example  .gitignore  AGENTS.md  COMPLETED.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  parcferme.sln
.github/: auto-assign.yml  cliff.toml  copilot-instructions.md  copilot-setup-steps.yaml  dependabot.yml  labeler.yml
backups/: parcferme_backup_20260107_233649.dump  parcferme_backup_pre_2020_sync.dump  sync_log.txt
docs/: BLUEPRINT.md  BULK_SYNC.md  DESIGN_SYSTEM.md  ERGAST_DDL.md  ERGAST_MIGRATION.md  (+2 more)
src/python/: AGENTS.md  README.md  nohup.out  pyproject.toml
src/python/ingestion/: __init__.py  __main__.py  bulk_sync.py  cache.py  cleanup.py  config.py  db.py  detect_roles.py  entity_resolver.py  ergast_import.py  healthcheck.py  known_aliases.json  models.py  repository.py  review_matches.py  role_detection.py  seed_f1_2026.py  sync.py  validate_ergast.py  verify.py
src/python/ingestion/clients/: __init__.py  openf1.py
src/python/ingestion/matching/: __init__.py  circuits.py  core.py  distance.py  drivers.py  normalization.py  rounds.py  teams.py
src/python/ingestion/services/: __init__.py  base.py  ergast.py
src/python/ingestion/sources/: __init__.py  base.py  ergast.py  openf1.py
src/python/tests/: __init__.py  test_entity_resolver.py  test_entity_resolver_scoring.py  test_models.py  test_openf1_client.py  test_pending_match.py  test_sync.py
src/python/tests/matching/: __init__.py  test_circuits.py  test_core.py  test_distance.py  test_drivers.py  test_normalization.py  test_rounds.py  test_teams.py
(+217 files in other folders)
